@@ -907,10 +907,10 @@ class SheetParser(handler.ContentHandler):
             self.f.set_underline(int(attrs['underline']))
             self.f.set_color(cnv2color(attrs['color']))
         elif tag == "para":
-            self.p.set_right_margin(float(attrs['rmargin']))
-            self.p.set_left_margin(float(attrs['lmargin']))
-            self.p.set_first_indent(float(attrs['first']))
-            self.p.set_padding(float(attrs['pad']))
+            self.p.set_right_margin(Utils.gfloat(attrs['rmargin']))
+            self.p.set_left_margin(Utils.gfloat(attrs['lmargin']))
+            self.p.set_first_indent(Utils.gfloat(attrs['first']))
+            self.p.set_padding(Utils.gfloat(attrs['pad']))
             self.p.set_alignment(int(attrs['align']))
             self.p.set_right_border(int(attrs['rborder']))
             self.p.set_header_level(int(attrs['level']))
